5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4138/executions/1758_1583.log
== TEST (2019-05-28 12:49:55) 
-- CODE:
x = input(insira a string):

-- ERROR:
File "XXXX", line 1
    x = input(insira a string):
                     ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 12:50:07) 
-- CODE:
x = input(insira a string)

-- ERROR:
File "XXXX", line 1
    x = input(insira a string)
                     ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 12:50:10) 
-- CODE:
x = input(insira a string)

-- ERROR:
File "XXXX", line 1
    x = input(insira a string)
                     ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 12:50:20) 
-- CODE:
x = input("insira a string")

-- ERROR:
File "XXXX", line 1
    x = input(insira a string)
                     ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 12:54:55) 
-- CODE:
x = input("insira a string:")

i = 0

while(i < size(x)):
	
	i = i + 3


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    while(i < size(x)):
NameError: name 'size' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 12:56:54) 
-- CODE:
from numpy import *
x = input("insira a string:")

i = 0

while(i < size(x)):
	
	i = i + 3


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 13:02:45) 
-- CODE:
from numpy import *
x = input("insira a string:")

i = 0
k = 3
msg = ""
while(i < len(x)):
	i = i + 3
	msg = msg + x[i:k]+ "."
print(msg)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 13:03:36) 
-- CODE:
from numpy import *
x = input("insira a string:")

i = 0
k = 3
msg = ""
while(i < len(x)):
	i = i + 3
	k = k + 3
	msg = msg + x[i:k]+ "."
print(msg)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 13:03:57) 
-- CODE:
from numpy import *
x = input("insira a string:")

i = 0
k = 3
msg = ""
while(i < len(x)):
	i = i + 3
	k = k + 3
	msg = msg + x[i:k]+ "."
print(msg)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 13:04:36) 
-- CODE:
from numpy import *
x = input("insira a string:")

i = 0
k = 3
msg = ""
while(i < len(x)):
	msg = msg + x[i:k]+ "."
	i = i + 3
	k = k + 3
	
print(msg)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 13:05:40) 
-- CODE:
from numpy import *
x = input("insira a string:")

i = 0
k = 3
msg = ""
while(i < len(x)):
	msg = msg + x[i:k]+ "."
	i = i + 3
	k = k + 3
if(x[i]== x[-1]):
	print(msg)


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 13:12:17) 
-- CODE:
from numpy import *
x = input("insira a string:")

i = 0
k = 3
msg = ""
while(i < len(x)):
	if(i == len(x)-3):
		msg = msg + x[i:k]
		i = i + 3
		k = k + 3
	else:
		msg = msg + x[i:k] + "."
		i = i + 3
		k = k + 3
print(msg)


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 13:12:29) 
-- CODE:
from numpy import *
x = input("insira a string:")

i = 0
k = 3
msg = ""
while(i < len(x)):
	if(i == len(x)-3):
		msg = msg + x[i:k]
		i = i + 3
		k = k + 3
	else:
		msg = msg + x[i:k] + "."
		i = i + 3
		k = k + 3
print(msg)


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-28 13:12:38) 
-- CODE:
from numpy import *
x = input("insira a string:")

i = 0
k = 3
msg = ""
while(i < len(x)):
	if(i == len(x)-3):
		msg = msg + x[i:k]
		i = i + 3
		k = k + 3
	else:
		msg = msg + x[i:k] + "."
		i = i + 3
		k = k + 3
print(msg)


-- EXECUTION TIME:
0.378373
-- TEST CASE 1:
---- input:
123
---- correct output:
123
---- user output:
123
-- TEST CASE 2:
---- input:
123456789000987654321
---- correct output:
123.456.789.000.987.654.321
---- user output:
123.456.789.000.987.654.321
-- TEST CASE 3:
---- input:
987654321
---- correct output:
987.654.321
---- user output:
987.654.321
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
